--- a/lib/components/Sections/ContactSection/ContactSection.module.css
+++ b/lib/components/Sections/ContactSection/ContactSection.module.css
@@ -90,7 +90,8 @@
   height: 100%;
 }
 .contactUs .errorStyle {
-  padding-bottom: 8px;
+  padding-bottom: 10px;
+  width: 250px;
 }
 @media (min-width: 767px) {
   .contactUs {
@@ -135,7 +136,7 @@
   }
 }
 .buttonStyle {
-  background-color: #f46b45;
+  background-color: var(--primary-color);
   padding: 6px;
   font-size: 16px;
   font-palette: dark;
@@ -168,6 +169,16 @@
   background-color: white;
   transition: 0.3s;
   position: relative;
+}
+
+.colorGreen {
+  color: #7aec7a;
+  padding-bottom: 25px;
+}
+
+.colorError {
+  color: #9a0505;
+  padding-bottom: 25px;
 }
 
 /*# sourceMappingURL=ContactSection.module.css.map */
